<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestCalculette</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="un">1</string>
    <string name="deux">2</string>
    <string name="trois">3</string>
    <string name="quatre">4</string>
    <string name="cinq">5</string>
    <string name="six">6</string>
    <string name="sept">7</string>
    <string name="huit">8</string>
    <string name="neuf">9</string>
    <string name="zero">0</string>
    <string name="virgule">.</string>
    <string name="ce">CE</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
    <string name="resultat">=</string>
    <string name="memory">Mémoire</string>
    <string name="title_activity_memory">MemoryActivity</string>

    <string name="dates_operations">Dates Operations</string>
    <string name="operations">Operations</string>

</resources>
