<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CalcActivity"
    android:id="@+id/">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sept"
        android:id="@+id/button"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="78dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huit"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neuf"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/button4"
        android:layout_toEndOf="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quatre"
        android:id="@+id/button6"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinq"
        android:id="@+id/button7"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:id="@+id/button8"
        android:layout_alignBottom="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moins"
        android:id="@+id/button9"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/un"
        android:id="@+id/button10"
        android:layout_below="@+id/button6"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deux"
        android:id="@+id/button11"
        android:layout_toEndOf="@+id/button6"
        android:layout_below="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trois"
        android:id="@+id/button12"
        android:layout_alignBottom="@+id/button11"
        android:layout_toEndOf="@+id/button11"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi"
        android:id="@+id/button13"
        android:layout_alignBottom="@+id/button12"
        android:layout_toEndOf="@+id/button12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ce"
        android:id="@+id/button14"
        android:layout_below="@+id/button10"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/button15"
        android:layout_alignBottom="@+id/button14"
        android:layout_toEndOf="@+id/button14" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/virgule"
        android:id="@+id/button16"
        android:layout_alignBottom="@+id/button15"
        android:layout_toEndOf="@+id/button15" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divi"
        android:id="@+id/button17"
        android:layout_alignBottom="@+id/button16"
        android:layout_toEndOf="@+id/button16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultat"
        android:id="@+id/button18"
        android:layout_below="@+id/button14"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button17" />


</RelativeLayout>
